# synapse

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
config/: synapse.toml  wasdfx-test.toml
docs/: WASDFX-INTEGRATION.md
legacy_prototype/: Cargo.toml  Dockerfile
legacy_prototype/src/: main.rs
src/: config.rs  dlq.rs  event.rs  lib.rs  main.rs  router.rs  shutdown.rs
src/effects/: log.rs  mod.rs  wasdfx.rs  webhook.rs
