[package]
name = "synapse"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
config = "0.15.19"
deadpool-redis = "0.22.0"
dotenvy = "0.15.7"
redis = { version = "0.32.7", features = ["streams", "tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }

# Sprint 4: Router & Effects
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
hostname = "0.4"
thiserror = "2.0"
