[package]
name = "synapse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dependencies]
axum = "0.7.5"
deadpool-redis = "0.14.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
